--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template", // FIXME
+  "name": "template",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -8,11 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rkrupinski/template.git" // FIXME
+    "url": "git+https://github.com/rkrupinski/template.git"
   },
   "author": "Rafał Krupiński",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.1.8",
     "clean-webpack-plugin": "^0.1.14",
     "html-webpack-plugin": "^2.26.0",
     "webpack": "^2.2.1",
