Don’t even try to refactor it.

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,9 @@
     ["env", {
       "targets": {
         "browsers": "last 2 versions"
-      }
+      },
+      "modules": false,
+      "useBuiltIns": true
     }]
   ],
   "plugins": [
