--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dashboard -- webpack -w --config webpack.config.dev.js",
+    "start": "webpack-dashboard -- webpack --watch --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js"
   },
   "repository": {
@@ -16,11 +16,27 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.1.8",
+    "babel-preset-react": "^6.23.0",
     "clean-webpack-plugin": "^0.1.14",
+    "css-loader": "^0.27.3",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "html-webpack-plugin": "^2.26.0",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
     "webpack-dashboard": "^0.2.1",
     "webpack-merge": "^2.3.1"
+  },
+  "dependencies": {
+    "normalize.css": "^5.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "styled-components": "^1.4.4"
   }
 }
