--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,8 @@
   "env": {
     "browser": true
   },
+  "rules": {
+    "no-use-before-define": ["error", { "functions": false }]
+  },
   "extends": "airbnb"
 }
