--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dashboard -- webpack --watch --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -30,13 +29,13 @@
     "html-webpack-plugin": "^2.26.0",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-dashboard": "^0.2.1",
-    "webpack-merge": "^2.3.1"
+    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "3.0.0-beta.6",
     "styled-components": "^1.4.4"
   }
 }
