--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "react-template",
   "version": "0.0.0",
   "description": "",
   "scripts": {
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rkrupinski/template.git"
+    "url": "git+https://github.com/rkrupinski/react-template.git"
   },
   "author": "Rafał Krupiński",
   "license": "MIT",
