--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
   "rules": {
     "no-use-before-define": ["error", { "functions": false }]
   },
+  "settings": {
+    "import/resolver": "webpack"
+  },
   "extends": "airbnb"
 }
