--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "",
-    "test": "jest --watch"
+    "build": "webpack",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,8 @@
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "normalize.css": "^5.0.0",
