--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack",
+    "build": "cross-env BABEL_ENV=production webpack",
     "test": "jest"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.23.0",
     "clean-webpack-plugin": "^0.1.14",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
