--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^6.10.0",
     "html-webpack-plugin": "^2.26.0",
     "jest": "^19.0.2",
+    "precommit-hook": "^3.0.0",
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
@@ -55,5 +56,8 @@
       "<rootDir>/src",
       "node_modules"
     ]
-  }
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
