--- a/.babelrc
+++ b/.babelrc
@@ -21,7 +21,8 @@
     },
     "test": {
       "plugins": [
-        "transform-es2015-modules-commonjs"
+        "transform-es2015-modules-commonjs",
+        "babel-plugin-dynamic-import-node"
       ]
     }
   }
