--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "normalize.css": "^5.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-hot-loader": "3.0.0-beta.6",
+    "react-hot-loader": "next",
     "styled-components": "^1.4.4"
   },
   "jest": {
