--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "pre-commit": "^1.2.2",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^16.0.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-bundle-analyzer": "^2.8.3",
@@ -47,9 +47,9 @@
   },
   "dependencies": {
     "normalize.css": "^7.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-hot-loader": "next",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.0.0",
     "styled-components": "^2.1.1"
   },
   "jest": {
