--- a/.babelrc
+++ b/.babelrc
@@ -7,11 +7,14 @@
       "modules": false,
       "useBuiltIns": true
     }],
-    "react"
+    "react",
+    "stage-1"
   ],
   "plugins": [
     "syntax-dynamic-import",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "transform-object-assign",
+    "transform-regenerator"
   ],
   "env": {
     "development": {
