--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "webpack-dev-server",
     "build": "webpack",
     "analyze": "cross-env ANALYZE_BUNDLE=1 webpack",
-    "test": "jest"
+    "test": "jest",
+    "updateTests": "jest --updateSnapshot"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jest": "^21.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "html-webpack-plugin": "^2.30.1",
@@ -46,10 +48,17 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-1": "^6.24.1",
+    "got": "^8.0.3",
     "polished": "^1.8.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "styled-components": "^2.2.1"
   },
   "jest": {
