--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "analyze": "cross-env ANALYZE_BUNDLE=1 webpack",
     "test": "jest",
-    "updateTests": "jest --updateSnapshot"
+    "updateTests": "jest --updateSnapshot",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -38,7 +39,9 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "html-webpack-plugin": "^2.30.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^21.2.1",
+    "jest-css-modules": "^1.1.0",
     "pre-commit": "^1.2.2",
     "react-test-renderer": "^16.0.0",
     "style-loader": "^0.19.0",
@@ -52,14 +55,18 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-1": "^6.24.1",
+    "file-loader": "^1.1.6",
     "got": "^8.0.3",
     "polished": "^1.8.1",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "styled-components": "^2.2.1"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.2.1",
+    "styled-is": "^1.1.2"
   },
   "jest": {
     "transform": {
@@ -68,7 +75,10 @@
     "moduleDirectories": [
       "<rootDir>/src",
       "node_modules"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "pre-commit": [
     "test"
